fea-rs/test-data/compile-tests/mini-latin/bad/variable_value_record_oob.ERR
error: value exceeds expected range (200, 1000)
in ./test-data/compile-tests/mini-latin/bad/variable_value_record_oob.fea at 1:24
  | 
1 | valueRecordDef <0 (wght=100:-100 wght=1100:-150) 0 0> foo;
  |                         ^^^

error: value exceeds expected range (200, 1000)
in ./test-data/compile-tests/mini-latin/bad/variable_value_record_oob.fea at 1:38
  | 
1 | valueRecordDef <0 (wght=100:-100 wght=1100:-150) 0 0> foo;
  |                                       ^^^^

error: normalized value should be in range (-1.0, 1.0)
in ./test-data/compile-tests/mini-latin/bad/variable_value_record_oob.fea at 2:24
  | 
2 | valueRecordDef <0 (wght=-1.2n:-100 wght=5n:-150) 0 0> boo;
  |                         ^^^^^

error: normalized value should be in range (-1.0, 1.0)
in ./test-data/compile-tests/mini-latin/bad/variable_value_record_oob.fea at 2:40
  | 
2 | valueRecordDef <0 (wght=-1.2n:-100 wght=5n:-150) 0 0> boo;
  |                                         ^^
